--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="description" content="A melhor lojinha do Zé do mundo!"
+    <link rel="icon" href="./src/pictures/logo lojinha do zé.png"
+    <link rel="stylesheet" href="./src/css/style.css">
     <title>Lojinha do Zé</title>
 </head>
 <body>
-    
+    <header class="menu">
+        <div class="container"> <!-- Definindo limite do conteúdo -->
+          <div class="menu-flex">
+              <div class="menu-column">
+              <h1 class="logo">Lojinha do Zé</h1>
+              <nav class="menu-nav">
+                <ul>
+                  <li><a href="">Televisões</a></li>
+                  <li><a href="">Celulares</a></li>
+                  <li><a href="">Eletrodomésticos</a></li>
+                  <li><a href="">Informática</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="menu-column menu-second-column">
+              <a href="" class="menu-link-button">Promoções</a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <div class="container">
+        <main class="products-wrapper">
+        <!-- Aqui ficarão os cards de produtos, criados por você -->
+        </main>
+      </div>
 </body>
 </html>
